app/src/main/java/com/example/jokeapp/domain/Errors/GenericError.kt
package com.example.jokeapp.domain.Errors

class GenericError : BaseJokeFailure() {
    override fun getMessage(): String {
        TODO("Not yet implemented")
    }
}